--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
 <h1>Análise do poema traduzir-se</h1>
 
 <div class="P1"></div>
+    
     <p> 
         O poema ‘Traduzir-se’ de Ferreira Gullar, aborda a dualidade, de como se pode ser algo e seu oposto conciliando-os ao mesmo tempo. Essa dualidade se mostra nas duas partes do eu lírico, uma sociável e um mais solitário. Ferreira Gullar é um pseudônimo de José Ribamar Ferreira, grande poeta nascido em 1930 no Maranhão e falecido em 2016 no Rio de Janeiro. Escreveu cerca de 50 livros durante a sua vida, foi indicado a diversos prêmios e venceu o prêmio Camões em 2010, prêmio dado pelos governos de Brasil e Portugal para escritores que contribuem para o enriquecimento do patrimônio literário e cultural da língua portuguesa.
     </p>
+
 </div>
 
 
 <div class="P2">
 
     <p> 
-        Como a maioria os poemas verbais, o poema traduzir-se é composto de versos e estrofes. Neste caso, o poema tem 6 estrofes de 4 versos e uma de 5. Para destacar o foco do poema (a diferença entre suas metades), o autor utiliza a repetição de palavras para criar a mesma estrutra em cada verso, como por exemplo: <i><b>Uma parte de mim  / é</b></i> todo mundo/ <i><b> outra parte é </b></i> ninguém/ fundo sem fundo/ <i><b>Uma parte de mim  / é</b></i> multidão/ <i><b> outra parte é </b></i> estranheza/ e solidão. Também é usada a antítese, ou seja a oposição de palavras: Uma parte de mim  / é<b><i> todo mundo/ </b></i> outra parte é  <b><i>  ninguém/ fundo sem fundo</b></i>. 
+        Como a maioria dos poemas verbais, o poema traduzir-se é composto de versos e estrofes. Neste caso, o poema tem 6 estrofes de 4 versos e uma de 5. Para destacar o foco do poema (a diferença entre as metades), o autor utiliza a repetição de palavras para criar a mesma estrutra em cada estrofe, como por exemplo: <i><b>Uma parte de mim  / é</b></i> todo mundo/ <i><b> outra parte é </b></i> ninguém/ fundo sem fundo/ <i><b>Uma parte de mim  / é</b></i> multidão/ <i><b> outra parte é </b></i> estranheza/ e solidão. Também é usada a antítese, ou seja a oposição de palavras: Uma parte de mim  / é<b><i> todo mundo/ </b></i> outra parte é  <b><i>  ninguém/ fundo sem fundo</b></i>. 
     </p>
 </div>
 
 <div class="P3">
 
     <p> 
-        oi
+        O poema 'Traduzir-se' é um poema 
     </p>
 </div>
 
