--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 <div class="P3">
 
     <p> 
-        O poema 'Traduzir-se' é um poema 
+        Ferreira Gullar, além de ótimo poeta também tinha outras habilidades, como lutas pelos seus direitos, era psicólogo e também comia o cu de quem tá lendo.
     </p>
 </div>
 
 </body>
-
+<!--O poema 'Traduzir-se' é um poema muito bem escrito feito por -->
 </html>
