--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h1>Análise do poema traduzir-se</h1>
 
-<div class="P1"></div>
+<div class="P1">
     
     <p> 
         O poema ‘Traduzir-se’ de Ferreira Gullar, aborda a dualidade, de como se pode ser algo e seu oposto conciliando-os ao mesmo tempo. Essa dualidade se mostra nas duas partes do eu lírico, uma sociável e um mais solitário. Ferreira Gullar é um pseudônimo de José Ribamar Ferreira, grande poeta nascido em 1930 no Maranhão e falecido em 2016 no Rio de Janeiro. Escreveu cerca de 50 livros durante a sua vida, foi indicado a diversos prêmios e venceu o prêmio Camões em 2010, prêmio dado pelos governos de Brasil e Portugal para escritores que contribuem para o enriquecimento do patrimônio literário e cultural da língua portuguesa.
@@ -30,10 +30,13 @@
 <div class="P3">
 
     <p> 
-        Ferreira Gullar, além de ótimo poeta também tinha outras habilidades, como lutas pelos seus direitos, era psicólogo e também comia o cu de quem tá lendo.
+        Ferreira Gullar, além de ótimo poeta também tinha outras habilidades, como lutas pelos seus direitos, era psicólogo e também comia o cu de quem tá lendo 
     </p>
 </div>
 
+<div> 
+    <img src="https://cdn130.picsart.com/294383378067211.png?type=webp&to=min&r=640"/>
+</div>
 </body>
 <!--O poema 'Traduzir-se' é um poema muito bem escrito feito por -->
 </html>
