--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="P3">
 
     <p> 
-        Ferreira Gullar, além de ótimo poeta também tinha outras habilidades, como lutas pelos seus direitos, era psicólogo e também comia o cu de quem tá lendo 
+        O poema 'Traduzir-se' é um poema muito bem escrito feito por 
     </p>
 </div>
 
@@ -38,5 +38,5 @@
     <img src="https://cdn130.picsart.com/294383378067211.png?type=webp&to=min&r=640"/>
 </div>
 </body>
-<!--O poema 'Traduzir-se' é um poema muito bem escrito feito por -->
+
 </html>
