--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 <div class="P3">
 
     <p> 
-        O poema 'Traduzir-se' é um poema muito bem escrito feito por 
+        Ferreira Gullar, além de ótimo poeta também tinha outras habilidades, como lutas pelos seus direitos, era psicólogo e também comia o cu de quem tá lendo 
     </p>
 </div>
 
 <div> 
+    <img src="https://cdn130.picsart.com/294383378067211.png?type=webp&to=min&r=640"/>
 </div>
 </body>
-
+<!--O poema 'Traduzir-se' é um poema muito bem escrito feito por -->
 </html>
